samples/_failures_safe/1761316999_eeef17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0d4d94d.c: In function ‘main’:
./samples/SAFE/__tmp_b0d4d94d.c:162:34: error: expected ‘)’ at end of input
  162 |     if (len > 0 && input[len - 1]
      |        ~                         ^
      |                                  )
./samples/SAFE/__tmp_b0d4d94d.c:162:5: error: expected declaration or statement at end of input
  162 |     if (len > 0 && input[len - 1]
      |     ^~
